[package]
name = "yt_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
regex = "1.5.4"
serde_json = "1.0.67"
lazy_static = "1.4.0"
crossterm = "0.20.0"

[profile.release]
lto = "fat"
opt-level = "z"